# refractor-muses

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.sh
doc/src/: conf.py  index.rst  introduction.rst
muses_capture/: README.md  README.txt  base_command.sh  muses_capture  run_retrieval.sh  setup_target.sh
muses_capture/tropomi-band7-test-pipeline-config/: batch.yml  combine.yml  config.yml  generate_targets.yml  geolocate.yml  level3.yml  pair.yml  plot.yml  plot_multiday.yml  plot_multiday_serial.yml  plot_serial.yml  profile.yml  profile_city.yml  profile_country.yml  profile_state.yml  retrieve.yml  retrieve_mpi_driver.yml  retrieve_one.yml  retrieve_refractor_config.py  sensor_config.yml  setup_targets.yml  sonde.yml
muses_config/: refractor_config.py  refractor_config_lrad.py  refractor_config_vlidort.py
test/: capture_data_test.py  config_test.py  conftest.py  constant_dict_test.py  cost_function_creator_test.py  cost_function_test.py  current_state_test.py  docopt_simple_test.py  error_analysis_test.py  filter_metadata_test.py  fm_obs_creator_test.py  muses_forward_model_test.py  muses_ils_info_test.py  muses_observation_test.py  muses_optical_depth_file_test.py  muses_retrieval_step_test.py  muses_run_dir_test.py  muses_spectral_window_test.py  observation_handle_test.py  omi_eof_test.py  omi_fm_object_creator_test.py  omi_radiance_test.py  omi_xsec_radiance_test.py  order_species_test.py  pytest.ini  qa_data_handle_test.py  raman_effect_test.py  refractor_muses_integration_test.py  refractor_omi_fm_test.py  refractor_retrieval_info_test.py  refractor_state_info_test.py  refractor_trop_omi_fm_test.py  refractor_tropomi_fm_test.py  refractor_uip_test.py  retrieval_configuration_test.py  retrieval_info_test.py  retrieval_output_test.py  retrieval_strategy_test.py  retrieval_swir_band8_test.py  retrieval_swir_test.py  (+12 more)
test/capture_data/: capture_data_test.py  old_py_retrieve_capture_data_test.py
test/end_to_end/: misc_test.py  omi_eof_test.py  original_data_test.py  retrieval_strategy_airs_irk_test.py  retrieval_strategy_airs_omi_test.py  retrieval_strategy_compare_test.py  retrieval_strategy_cris_tropomi_test.py  retrieval_strategy_tes_test.py  retrieval_swir_band8_test.py  retrieval_swir_test.py  tropomi_vmr_scaled_test.py  two_tropomi_test.py
test/fixtures/: compare_run.py  dir_fixture.py  muses_retrieval_step_fixture.py  old_state_fixture.py  retrieval_step_fixture.py  stand_alone_obs_fixture.py
test/old_py_retrieve/: conftest.py  cost_function_test.py  muses_observation_py_retrieve_test.py  muses_observation_test.py  muses_optical_depth_file_test.py  muses_strategy_old_strategy_table_test.py  refractor_omi_fm_test.py  refractor_tropomi_fm_test.py  refractor_uip_test.py  strategy_table_test.py
test/refwrapper_lite/: utils.py
test/test_support/: README  __init__.py  old_py_retrieve_test_support.py  test_support.py
test/unit/: cloud_result_summary_test.py  column_result_summary_test.py  config_test.py  cost_function_creator_test.py  current_state_test.py  error_analysis_test.py  filter_result_summary_test.py  muses_forward_model_test.py  muses_observation_test.py  muses_run_dir_test.py  muses_spectral_window_test.py  muses_strategy_test.py  observation_handle_test.py  omi_fm_object_creator_test.py  osp_reader_test.py  qa_data_handle_test.py  radiance_result_summary_test.py  record_and_play_func_test.py  retrieval_output_test.py  spectral_window_handle_test.py  state_element_climatology_test.py  state_element_freq_test.py  state_element_imp_test.py  state_element_omi_test.py  state_element_osp_test.py  state_element_single_test.py  state_element_test.py  state_element_tropomi_test.py  state_info_test.py  strategy_table_test.py  tropomi_fm_object_creator_test.py  tropomi_swir_fm_object_creator_test.py
test_new/: conftest.py
test_new/capture_data/: capture_data_test.py
test_new/end_to_end/: README.md  omi_eof_test.py  retrieval_strategy_airs_irk_test.py  retrieval_strategy_airs_omi_test.py  retrieval_strategy_cris_tropomi_test.py
test_new/fixtures/: README.md  compare_run.py  dir_fixture.py  misc_fixture.py  retrieval_step_fixture.py  stand_alone_obs_fixture.py
test_new/old_py_retrieve/: conftest.py  constant_dict_test.py  cost_function_test.py  muses_retrieval_step_test.py  refractor_tropomi_fm_test.py
tests/: conftest.py  pytest.ini
(+397 files in other folders)
