[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name='refractor-muses'
dynamic = ["version"]
description='ReFRACtor MUSE integration'
authors= [
{name = 'James McDuffie', email = 'James.McDuffie@jpl.nasa.gov'}
]
dependencies=[
 'numpy', 'docopt-ng', 'loguru', 'refractor-framework', "mpi4py", "scipy",
 "attrs", "h5py", "pandas", "pyhdf", "pytz", "scipy", "texttable",
 "pystac", "pyaml"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-loguru", "pytest-profiling", "pytest-sugar",
       "pytest-xdist", "ruff", "mypy", "seaborn"]
# Frank's ML
ml = ["scipy", "matplotlib", "cartopy", "tensorflow", "netcdf4", "juypterlab",
      "scikit-learn"]
# py_retrieve for backwards testing, and existing OSS and vlidort code
py_retrieve= ["py-retrieve", "muses-oss", "muses-vlidort"]
# For documentation
doc = ["ghp-import", "plantuml", "sphinx", "sphinxcontrib-plantuml"]

[tool.setuptools.packages.find]
where = ["python"] 
include = ["refractor.*"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "refractor.muses.version.__version__" }

[tools.setuptools]
package_dir={"" =  "python"}
package_data={"*" = ["py.typed", "*.pyi"], "refractor.muses" = ["retrieval_output.json"]}

[project.scripts]
refractor-retrieve = "refractor.muses.refractor_retrieve:main"

[tool.ruff.lint.per-file-ignores]

# __init__ includes things it doesn't use (e.g., __version__), which
# is really its job. So don't warn about this.

"__init__.py" = ["F401", "F403"]

# We have various "np.array != True", which looks wrong to ruff but is
# actually correct. Ignore these
"muses_observation_old.py" = ["E712"]
"omi_radiance.py" = ["E712"]
"tropomi_radiance.py" = ["E712"]
"muses_observation_py_retrieve_test.py" = ["E712"]
"muses_forward_model.py" = ["E712"]
"muses_forward_model_vlidort.py" = ["E712"]
"muses_reflectance_observation.py" = ["E712"]
"muses_spectral_window.py" = ["E712"]
"refractor_uip.py" = ["E712"]
"retrieval_info.py" = ["E712"]
"level1.py" = ["F403", "F405"]

[tool.ruff.lint]
# Old code we are matching. We don't want to actually change
# this code at all, the point is to compare our new code against
# this old code
exclude = ["retrieval_info_old.py"]

# Find usage of private variables, this often indicates a problem.
# You can turn this off where this is ok with "# noqa: SLF001" added to
# a line
extend-select = ["SLF001"] 

[tool.mypy]
exclude = '''(?x)(
^python/refractor/omi/config/.*\.py$   # files in config directory
)'''